python/src/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: http
    port: 15672 # to access our rabbitmq console - access to cluster port creeated in ingress.yaml
    targetPort: 15672
  - name: amqp
    protocol: TCP
    port: 5672 # port for message transmission
    targetPort: 5672
